Fix RTL header layout alignment on desktop

--- a/css/modules/main-navigation.scss
+++ b/css/modules/main-navigation.scss
@@ -17,7 +17,7 @@
 	}
 
 	@include atMedium {
-		float: left;
+		float: none;
 		margin-right: 20px;
 	}
 }
@@ -26,7 +26,8 @@
 	list-style: none;
 
 	@include atMedium {
-		float: left;
+		float: none;
+		display: inline-block;
 		padding-left: 20px;
 	}
 }
